[gd_scene load_steps=10 format=3 uid="uid://cbauvrtejo85e"]

[ext_resource type="Texture2D" uid="uid://c6fjr5vdny86m" path="res://andrew/assets/black.png" id="1_4ak1r"]
[ext_resource type="Script" path="res://andrew/scenes/level.gd" id="1_ads3o"]
[ext_resource type="PackedScene" uid="uid://cfloisxqepoth" path="res://andrew/scenes/player.tscn" id="1_pww3d"]
[ext_resource type="PackedScene" uid="uid://b4paxnawyvu3t" path="res://andrew/scenes/monster.tscn" id="4_ax7ef"]
[ext_resource type="PackedScene" uid="uid://lcx4uqyr8u4o" path="res://andrew/scenes/hud.tscn" id="5_ku0aa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1kxqm"]
size = Vector2(104.5, 689.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j6q6v"]
size = Vector2(116, 690)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1puno"]
size = Vector2(1210, 123)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n7ru6"]
size = Vector2(1211, 117)

[node name="Level" type="Node2D"]
script = ExtResource("1_ads3o")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(578, 327)
scale = Vector2(4.65625, 2.62891)
texture = ExtResource("1_4ak1r")

[node name="Player" parent="." instance=ExtResource("1_pww3d")]
position = Vector2(158, 327)

[node name="Monster" parent="." instance=ExtResource("4_ax7ef")]
position = Vector2(351, 123)

[node name="Borders" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Borders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D"]
position = Vector2(1204, 328)
shape = SubResource("RectangleShape2D_1kxqm")

[node name="StaticBody2D2" type="StaticBody2D" parent="Borders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D2"]
position = Vector2(-57, 324)
shape = SubResource("RectangleShape2D_j6q6v")

[node name="StaticBody2D3" type="StaticBody2D" parent="Borders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D3"]
position = Vector2(580, -62)
shape = SubResource("RectangleShape2D_1puno")

[node name="StaticBody2D4" type="StaticBody2D" parent="Borders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D4"]
position = Vector2(577.5, 706.5)
shape = SubResource("RectangleShape2D_n7ru6")

[node name="HUD" parent="." instance=ExtResource("5_ku0aa")]

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="LightBatteryTimer" type="Timer" parent="."]
autostart = true

[node name="PulseBatteryTimer" type="Timer" parent="."]
autostart = true

[connection signal="monster_killed" from="Monster" to="." method="_on_monster_monster_killed"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="LightBatteryTimer" to="." method="_on_light_battery_timer_timeout"]
[connection signal="timeout" from="PulseBatteryTimer" to="." method="_on_pulse_battery_timer_timeout"]
